Fixed a bug which'd cause the 'x local changes' to be pretty much unreadable

--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -173,6 +173,7 @@ body.appLoading #sideBar {
 
 	#sideBar .noConnectionMessage .text {
 		margin-left: 47px;
+		color: #aaa;
 	}
 
 
